# Dynamic-Audio_Signal-Processor

./: README.md  libbyrevived.py  main.py  main2.py  main3.py  main4.py  midi.py  pyproject.toml  recorder.py
midis/: ABC_pitch_corrected_basic_pitch.mid  RB_basic_pitch.mid  inputBwvs_pitch_corrected_basic_pitch.mid  inputPmHZ_pitch_corrected_basic_pitch.mid  inputxtoS_pitch_corrected_basic_pitch.mid
trash/: Ansh2_basic_pitch.mid  Ansh2_pitch_corrected_basic_pitch.mid  RB_pitch_corrected_basic_pitch.mid  inputAOAN_pitch_corrected_basic_pitch.mid  inputEdxj_pitch_corrected_basic_pitch.mid  inputNdam_pitch_corrected_basic_pitch.mid  inputNdam_pitch_corrected_pitch_corrected_basic_pitch.mid  inputNdam_pitch_corrected_pitch_corrected_pitch_corrected_basic_pitch.mid  inputPWph_pitch_corrected_basic_pitch.mid  inputSBMD_pitch_corrected_basic_pitch.mid  inputTatt_pitch_corrected_basic_pitch.mid  inputXvdy_pitch_corrected_basic_pitch.mid  inputZJjL_pitch_corrected_basic_pitch.mid  inputetfR_pitch_corrected_basic_pitch.mid  inputoayz_pitch_corrected_basic_pitch.mid  inputoayz_pitch_corrected_pitch_corrected_basic_pitch.mid  inputoayz_pitch_corrected_pitch_corrected_pitch_corrected_basic_pitch.mid  inputoayz_pitch_corrected_pitch_corrected_pitch_corrected_pitch_corrected_basic_pitch.mid  inputoayz_pitch_corrected_pitch_corrected_pitch_corrected_pitch_corrected_pitch_corrected_basic_pitch.mid  inputrcnH_pitch_corrected_basic_pitch.mid  inputurCv_pitch_corrected_basic_pitch.mid  inputxIyC_pitch_corrected_basic_pitch.mid  inputynQe_pitch_corrected_basic_pitch.mid  main.py  main3.py  (+3 more)
